k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jwt-module
  namespace: jwt-module
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jwt-module
  ports:
    - name: http
      port: 80
      targetPort: 5001
      protocol: TCP
